Emacspeak News --History Of User-Visible Changes
$Id$
Author: T. V. Raman <raman@cs.cornell.edu>

* Emacspeak 19.0 Additions And Changes:

Emacspeak 19.0 provides the following user level enhancements:

* New Emacspeak Features:

** emacspeak-ocr.el:

etc/ocr-client.pl implements the Emacspeak OCR interface 
for OCRXTR from Vividata.

** emacspeak-wizards.el:

New productivity wizards.

** emacspeak-websearch.el:

Updated websearch templates.

** emacspeak-url-template.el:

Additional smart URL templates.



Local variables:
 mode: outline
 paragraph-separate: "[ ]*$"
end: